unpackaged/main/default/objects/pse__Time_Date__c/fields/pse__Day_Of_Week__c.field-meta.xml
<CustomField>
    <fullName>pse__Day_Of_Week__c</fullName>
    <description>Displays the label corresponding to the day of week for the Date field value.</description>
    <formula>CASE(MOD((pse__Date__c-DATE(2000,1,2)),7),0,$Label.pse__common_label_sunday,1,$Label.pse__common_label_monday,2,$Label.pse__common_label_tuesday,3,$Label.pse__common_label_wednesday,4,$Label.pse__common_label_thursday,5,$Label.pse__common_label_friday,$Label.pse__common_label_saturday)</formula>
    <inlineHelpText>Displays the label corresponding to the day of week for the Date field value.</inlineHelpText>
    <label>Day Of Week</label>
    <type>Text</type>
</CustomField>