unpackaged/main/default/objects/pse__Time_Date__c/fields/pse__Hours__c.field-meta.xml
<CustomField>
    <fullName>pse__Hours__c</fullName>
    <description>The number of hours that the parent Timecard contains for the specified date.</description>
    <inlineHelpText>The number of hours that the parent Timecard contains for the specified date.</inlineHelpText>
    <label>Hours</label>
    <precision>4</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Number</type>
</CustomField>