unpackaged/main/default/objects/pse__Time_Date__c/fields/pse__Timecard__c.field-meta.xml
<CustomField>
    <fullName>pse__Timecard__c</fullName>
    <description>The parent Timecard for which this Time Date record represents a single hour value for one of its seven contained dates.</description>
    <inlineHelpText>The parent Timecard for which this Time Date record represents a single hour value for one of its seven contained dates.</inlineHelpText>
    <label>Timecard</label>
    <referenceTo>pse__Timecard_Header__c</referenceTo>
    <relationshipLabel>Time Dates</relationshipLabel>
    <relationshipName>Time_Dates</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>